# projeto-projecao

./: .env  .gitignore  .gitmodules  README.md  compose.yaml  docker-compose.yml  produtos.csv
Frontend/: dockerfile.frontend  package-lock.json  package.json
Frontend/src/app/: layout.tsx  page.tsx
Frontend/src/app/EditarProduto/: page.tsx
Frontend/src/app/Previsoes/: page.tsx
Frontend/src/app/api/produtos/: route.ts
backend/: .dockerignore  .gitignore  DockerFile  dockerfile.backend  main.py  produtos.csv  pyproject.toml  requirements.txt  run.py  train_predict.py
backend/app/api/: router.py
backend/app/api/endpoints/: predictions.py  products.py
backend/app/db/: session.py
backend/app/models/: prediction.py  product.py
backend/app/schemas/: product.py
backend/app/services/: ml_service.py
backend/src/: main.py
backend/src/api/: router.py
backend/src/api/endpoints/: dashboard.py  predictions.py  products.py  upload.py
backend/src/db/: session.py
backend/src/models/: prediction.py  product.py
backend/src/schemas/: prediction.py  product.py
backend/src/services/: ml_service.py
frontend/: .dockerignore  frontend.yml  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: FeedbackModal.tsx  ProductForm.tsx
frontend/src/hooks/: useProducts.ts
frontend/src/pages/: Dashboard.tsx  Previsoes.tsx
frontend/src/pages/produto/: CriarProduto.tsx  EditarProduto.tsx  ImportarCSV.tsx  Produto.tsx
frontend/src/schemas/: productSchema.ts
